tests/fail/expr/let.rs
fn main() {
    one_assert::assert!(let);
    one_assert::assert!(let b);
    one_assert::assert!(let b = true);
    one_assert::assert!(let b = 1 +);
}
